--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -17,7 +17,10 @@
   "author": "Hitesh dutt",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.1"
   },
   "devDependencies": {
     "eslint": "^8.54.0",
